package com.outime.app.domain.model

data class Business(
    val id: String = "",
    val ownerId: String = "",
    val name: String = "",
    val description: String = "",
    val category: String = ""
)